--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^3.0.0",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-plugin-streaming": "^2.0.0",
+    "chartjs-plugin-zoom": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
